refactor(plotting): add UMAP projection method and enhance visualization functionality

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,8 @@ dependencies = [
   "cellpose-adapt @ git+https://github.com/mario-koddenbrock/cellpose-adapt.git",
   "albumentations",
   "btrack",
-  "hf_xet"
+  "hf_xet",
+  "umap"
 ]
 
 [project.urls]
