feat(optimization): update script to launch Slurm jobs for video files and refactor config handling

--- a/config/tuning_config_cluster.json
+++ b/config/tuning_config_cluster.json
@@ -1,13 +1,12 @@
 {
   "model_name": "facebook/dinov2-large",
   "embedding_layer": 5,
-  "hf_cache_dir": null,
-  "reference_series_dir": "data/mpi_converted/type_B/250123_GLO19_R02_6um HEK PHK10_DMSO _002_cropped_flatfield_registered_BGsubt",
-  "num_compare_series": 5,
-  "num_compare_frames": 50,
-  "temp_dir": ".temp",
-  "output_config_file": "best_250123_GLO19_R02.json",
-  "output_config_id": "best_250123_GLO19_R02",
+  "hf_cache_dir": "/scratch/hface_models",
+  "reference_video_path": "",
+  "num_compare_frames": 10,
+  "temp_dir": "/scratch/koddenbrock/mt/.temp",
+  "output_config_file": "",
+  "output_config_id": "",
   "output_config_num_frames": 10,
   "direction": "maximize",
   "similarity_metric": "cosine",
