feat(tuning_config): update output configuration and adjust parameters for improved model tuning

--- a/config/tuning_config_cluster.json
+++ b/config/tuning_config_cluster.json
@@ -5,7 +5,8 @@
   "reference_video_path": "",
   "num_compare_frames": 10,
   "temp_dir": "/scratch/koddenbrock/mt/.temp",
-  "output_config_file": "",
+  "output_config_folder": "/scratch/koddenbrock/mt/hpo/optimal_configs",
+  "output_config_num_best": 5,
   "output_config_id": "",
   "output_config_num_frames": 10,
   "direction": "maximize",
