--- a/config/tuning_config_local.json
+++ b/config/tuning_config_local.json
@@ -1,214 +1,209 @@
 {
   "model_name": "facebook/dinov2-large",
+  "embedding_layer": 5,
   "hf_cache_dir": null,
-  "reference_series_dir": "data/mpi/type_A",
-  "num_compare_series": 5,
-  "num_compare_frames": 5,
+  "reference_video_path": "data/mpi/type_B/250123_GLO19_R03_6um Pf PPF21_DMSO _003_cropped_flatfield_registered_BGsubt.tif",
+  "num_compare_frames": 10,
   "temp_dir": ".temp",
-  "output_config_file": "best_A_cosine.json",
-  "output_config_id": "best_A_cosine",
-  "output_config_num_frames": 50,
+  "output_config_folder": "config/optimal_configs",
+  "output_config_num_best": 5,
+  "output_config_id": "250123_GLO19_R03_6um Pf PPF21_DMSO _003_cropped_flatfield_registered_BGsubt",
+  "output_config_num_frames": 10,
   "direction": "maximize",
   "similarity_metric": "cosine",
-  "num_trials": 20000,
+  "num_trials": 10,
   "pca_components": 0,
   "load_if_exists": true,
   "img_size": [
     500,
     500
   ],
-  "fps": 5,
+  "fps": 0.5,
   "base_wagon_length_min_range": [
-    2.0,
-    20.0
+    5.0,
+    15.0
   ],
   "base_wagon_length_max_range": [
     30.0,
-    80.0
+    60.0
   ],
   "microtubule_length_min_range": [
-    50,
-    150
+    20,
+    120
   ],
   "microtubule_length_max_range": [
-    100,
-    250
+    120,
+    200
   ],
   "tail_wagon_length_range": [
     5.0,
-    20.0
+    15.0
   ],
   "max_angle_range": [
     0.05,
-    0.4
+    0.2
   ],
   "bending_prob_range": [
-    0.0,
-    1.0
+    0.05,
+    0.5
   ],
   "max_angle_sign_changes_range": [
     0,
-    3
+    10
   ],
   "num_microtubule_range": [
     5,
-    50
-  ],
-  "microtubule_seed_min_dist_range": [
-    0,
-    50
-  ],
-  "margin_range": [
-    0,
     20
   ],
+  "microtubule_seed_min_dist": 10,
+  "margin": 5,
   "psf_sigma_h_range": [
-    0.2,
-    0.4
+    0.3,
+    0.5
   ],
   "psf_sigma_v_range": [
-    0.6,
-    0.9
+    0.4,
+    0.8
   ],
   "tubule_width_variation_range": [
-    0.0,
+    0.05,
     0.2
   ],
   "background_level_range": [
-    0.5,
+    0.4,
     0.9
   ],
   "tubulus_contrast_range": [
     -0.6,
-    0.6
+    -0.3
   ],
   "seed_red_channel_boost_range": [
-    0.0,
-    0.6
+    0.1,
+    0.3
   ],
   "tip_brightness_factor_range": [
     1.0,
     1.5
   ],
   "red_channel_noise_std_range": [
-    0.0,
-    0.05
+    0.03,
+    0.1
   ],
   "quantum_efficiency_range": [
-    40.0,
-    120.0
+    90.0,
+    110.0
   ],
   "gaussian_noise_range": [
-    0.01,
-    0.15
+    0.1,
+    0.4
   ],
   "vignetting_strength_range": [
     0.0,
-    0.2
+    0.05
   ],
   "global_blur_sigma_range": [
     0.3,
-    1.5
+    0.7
   ],
   "fixed_spots_tuning": {
     "count_range": [
-      0,
-      100
+      500,
+      1500
     ],
     "intensity_min_range": [
-      0.0001,
-      0.1
+      -0.4,
+      -0.2
     ],
     "intensity_max_range": [
-      0.1,
-      0.3
+      0.09,
+      0.11
     ],
     "radius_min_range": [
-      1,
-      5
+      0,
+      2
     ],
     "radius_max_range": [
-      5,
-      10
+      1,
+      3
     ],
     "kernel_size_min_range": [
       0,
-      5
+      2
     ],
     "kernel_size_max_range": [
-      5,
-      10
+      0,
+      3
     ],
     "sigma_range": [
-      0.1,
-      5.0
+      0.09,
+      0.11
     ],
     "polygon_p_range": [
-      0.0,
-      0.7
+      0.09,
+      0.11
     ],
     "polygon_vertex_count_min_range": [
       3,
       5
     ],
     "polygon_vertex_count_max_range": [
-      5,
+      6,
       10
     ],
     "max_step_range": null
   },
   "random_spots_tuning": {
     "count_range": [
-      0,
-      50
+      500,
+      2000
     ],
     "intensity_min_range": [
-      0.0001,
-      0.1
+      -0.3,
+      -0.2
     ],
     "intensity_max_range": [
-      0.0,
-      0.5
+      0.09,
+      0.11
     ],
     "radius_min_range": [
-      1,
-      5
+      0,
+      2
     ],
     "radius_max_range": [
-      5,
-      10
+      1,
+      3
     ],
     "kernel_size_min_range": [
       0,
-      5
+      2
     ],
     "kernel_size_max_range": [
-      5,
-      10
+      0,
+      5
     ],
     "sigma_range": [
-      0.1,
-      5.0
+      0.09,
+      0.11
     ],
     "polygon_p_range": [
-      0.0,
-      1.0
+      0.01,
+      0.9
     ],
     "polygon_vertex_count_min_range": [
       3,
-      10
+      5
     ],
     "polygon_vertex_count_max_range": [
-      3,
+      6,
       10
     ],
     "max_step_range": null
   },
   "growth_speed": 2.5,
   "shrink_speed": 5.0,
-  "catastrophe_prob": 0.01,
-  "rescue_prob": 0.01,
-  "max_pause_at_min_frames": 5,
+  "catastrophe_prob": 0.05,
+  "rescue_prob": 0.05,
+  "max_pause_at_min_frames": 50,
   "prob_to_flip_bend": 0.1,
   "jitter_px": 0.5,
   "moving_spots": {
