--- a/config/tuning_config_cluster.json
+++ b/config/tuning_config_cluster.json
@@ -2,6 +2,7 @@
   "model_name": "facebook/dinov2-large",
   "embedding_layer": 5,
   "hf_cache_dir": "/scratch/hface_models",
+  "reference_images_dir": "",
   "reference_video_path": "",
   "num_compare_frames": 10,
   "temp_dir": "/scratch/koddenbrock/mt/.temp",
