--- a/config/tuning_config_local.json
+++ b/config/tuning_config_local.json
@@ -2,7 +2,8 @@
   "model_name": "facebook/dinov2-large",
   "embedding_layer": 5,
   "hf_cache_dir": null,
-  "reference_video_path": "data/mpi/type_B/250123_GLO19_R03_6um Pf PPF21_DMSO _003_cropped_flatfield_registered_BGsubt.tif",
+  "reference_video_path": "",
+  "reference_images_dir": "data/SynMT/real/full/250123_GLO19_R02_6um HEK PHK10_DMSO _002_cropped_flatfield_registered_BGsubt_crop_0",
   "num_compare_frames": 10,
   "temp_dir": ".temp",
   "output_config_folder": "config/optimal_configs",
@@ -11,7 +12,7 @@
   "output_config_num_frames": 10,
   "direction": "maximize",
   "similarity_metric": "cosine",
-  "num_trials": 10,
+  "num_trials": 5000,
   "pca_components": 0,
   "load_if_exists": true,
   "img_size": [
