fix(config): rename 'generate_microtubule_mask' to 'generate_mt_mask' for consistency across configuration files

--- a/config/best_synthetic_config_A_fid.json
+++ b/config/best_synthetic_config_A_fid.json
@@ -90,6 +90,6 @@
   "show_scale": true,
   "um_per_pixel": 0.07376137713165568,
   "scale_bar_um": 13.963725140416502,
-  "generate_microtubule_mask": false,
+  "generate_mt_mask": false,
   "generate_seed_mask": false
 }
