--- a/config/tuning_config_local.json
+++ b/config/tuning_config_local.json
@@ -237,6 +237,6 @@
   "scale_bar_um": 5.0,
   "show_time": false,
   "show_scale": false,
-  "generate_microtubule_mask": true,
+  "generate_mt_mask": true,
   "generate_seed_mask": false
 }
