--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install pytest
         pip install pytest-mock
+        pip install -r requirements.txt
         pip install .
 
     - name: Run tests
