feat: add micro_sam installation to CI and remove from requirements.txt

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,6 +27,7 @@ jobs:
         pip install pytest
         pip install pytest-mock
         pip install -r requirements.txt
+        conda install -c conda-forge micro_sam
         pip install .
 
     - name: Run tests
