--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+numpy~=2.0.2
 pyyaml~=6.0.2
 optuna~=4.4.0
 opencv-python~=4.12.0.88
@@ -24,4 +25,3 @@ pytest~=8.3.5
 pandas~=2.2.3
 seaborn~=0.13.2
 ultralytics~=8.3.159
-numpy
