--- a/requirements.txt
+++ b/requirements.txt
@@ -19,8 +19,11 @@ lpips~=0.1.4
 torch~=2.7.1
 requests~=2.32.3
 pillow~=11.3.0
-transformers~=4.52.3
+transformers~=4.55.2
 pytest~=8.3.5
 pandas~=2.2.3
 seaborn~=0.13.2
 ultralytics~=8.3.159
+numpy~=1.26.4
+micro_sam~=1.6.0
+huggingface_hub~=0.34.4
