--- a/config/tuning_config_cluster.json
+++ b/config/tuning_config_cluster.json
@@ -1,5 +1,5 @@
 {
-  "model_name": "facebook/dinov2-small",
+  "model_name": "facebook/dinov2-large",
   "embedding_layer": 5,
   "hf_cache_dir": "/scratch/hface_models",
   "reference_images_dir": "",
