--- a/data/synthetic_manual/series_10_config.json
+++ b/data/synthetic_manual/series_10_config.json
@@ -4,9 +4,11 @@
     512,
     512
   ],
-  "fps": 5,
   "num_frames": 1,
-  "color_mode": true,
+  "fps": 5,
+  "num_microtubule": 20,
+  "microtubule_seed_min_dist": 50,
+  "margin": 5,
   "growth_speed": 2.5,
   "shrink_speed": 5.0,
   "catastrophe_prob": 0.05,
@@ -17,13 +19,13 @@
   "microtubule_length_min": 50,
   "microtubule_length_max": 150,
   "tail_wagon_length": 10.0,
-  "max_angle": 0.1,
-  "bending_prob": 0.5,
+  "bending_angle_gamma_shape": 1.0,
+  "bending_angle_gamma_scale": 0.02,
   "max_angle_sign_changes": 3,
   "prob_to_flip_bend": 0.1,
-  "num_microtubule": 20,
-  "microtubule_seed_min_dist": 50,
-  "margin": 5,
+  "minus_end_target_length_mean": 0.0,
+  "minus_end_target_length_std": 20.0,
+  "minus_end_velocity": 1.0,
   "psf_sigma_h": 0.4,
   "psf_sigma_v": 0.7,
   "tubule_width_variation": 0.1,
@@ -31,14 +33,12 @@
   "tubulus_contrast": -0.3,
   "seed_red_channel_boost": 0.25,
   "tip_brightness_factor": 1.2,
-  "brightness": 0.0,
-  "contrast": 50.0,
   "red_channel_noise_std": 0.05,
   "quantum_efficiency": 100.0,
   "gaussian_noise": 0.3,
-  "jitter_px": 0.5,
   "vignetting_strength": 0.1,
   "global_blur_sigma": 0.05,
+  "jitter_px": 0.5,
   "fixed_spots": {
     "count": 1000,
     "intensity_min": -0.3,
@@ -81,9 +81,9 @@
     "polygon_vertex_count_max": 7,
     "max_step": null
   },
-  "albumentations": null,
-  "show_time": false,
-  "show_scale": false,
+  "color_mode": true,
+  "contrast": 50.0,
+  "brightness": 0.0,
   "annotation_color_rgb": [
     1.0,
     1.0,
@@ -91,6 +91,9 @@
   ],
   "um_per_pixel": 0.1,
   "scale_bar_um": 5.0,
+  "show_time": false,
+  "show_scale": false,
   "generate_mt_mask": true,
-  "generate_seed_mask": false
+  "generate_seed_mask": false,
+  "albumentations": null
 }
