--- a/config/tuning_config_cluster.json
+++ b/config/tuning_config_cluster.json
@@ -40,13 +40,13 @@
     5.0,
     15.0
   ],
-  "max_angle_range": [
-    0.05,
-    0.15
+  "bending_angle_gamma_shape_range": [
+    0.5,
+    2.0
   ],
-  "bending_prob_range": [
-    0.05,
-    0.5
+  "bending_angle_gamma_scale_range": [
+    0.01,
+    0.05
   ],
   "max_angle_sign_changes_range": [
     0,
