--- a/config/tuning_config_local.json
+++ b/config/tuning_config_local.json
@@ -14,7 +14,7 @@
   "similarity_metric": "cosine",
   "num_trials": 5,
   "pca_components": 0,
-  "load_if_exists": false,
+  "load_if_exists": true,
   "img_size": [
     512,
     512
