--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 pyyaml~=6.0.2
 optuna~=4.4.0
-opencv-python~=4.12.0.88
+opencv-python~=4.9.0
 tifffile~=2025.6.11
 matplotlib~=3.10.5
 scikit-image~=0.25.2
@@ -24,5 +24,6 @@ pytest~=8.3.5
 pandas~=2.2.3
 seaborn~=0.13.2
 ultralytics~=8.3.159
-numpy>=1.26,<2.3
+numpy<2
 huggingface_hub~=0.34.4
+tensorflow
