feat: update python version requirement in environment.yml to >=3.11

--- a/environment.yml
+++ b/environment.yml
@@ -2,9 +2,8 @@ name: microtubule_tracking
 channels:
   - conda-forge
 dependencies:
-  - python=3.10
+  - python>=3.11
   - micro_sam
   - pip
   - pip:
       - -r requirements.txt
-
