--- a/requirements.txt
+++ b/requirements.txt
@@ -26,5 +26,6 @@ seaborn~=0.13.2
 ultralytics~=8.3.159
 numpy<2.0,>=1.26
 huggingface_hub~=0.34.4
-# tensorflow # for stardist
+tensorflow-macos
+gdown
 
