--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
+# Apple Silicon M3 compatibility notes:
+# If you encounter TensorFlow/Keras conflicts during installation, run:
+# pip uninstall pyarrow
+# This fixes compatibility issues between tf-keras and Apple Silicon optimizations.
+
 pyyaml~=6.0.2
 optuna~=4.4.0
 opencv-python~=4.9.0
@@ -19,7 +24,7 @@ lpips~=0.1.4
 torch~=2.7.1
 requests~=2.32.3
 pillow~=11.3.0
-transformers~=4.55.2
+transformers~=4.56.1,
 pytest~=8.3.5
 pandas~=2.2.3
 seaborn~=0.13.2
@@ -28,4 +33,4 @@ numpy<2.0,>=1.26
 huggingface_hub~=0.34.4
 tensorflow-macos
 gdown
-
+tf-keras
