--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,34 +2,38 @@ name: CI
 
 on:
   push:
-    branches:
-      - main
+    branches: [main]
   pull_request:
-    branches:
-      - main
+    branches: [main]
 
 jobs:
   test:
-    runs-on: ubuntu-latest
+    runs-on: macos-15
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v4
 
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.11'
+      - name: Set up micromamba (arm64)
+        uses: mamba-org/setup-micromamba@v2
+        with:
+          environment-name: test
+          create-args: >-
+            python=3.11
+            micro_sam
+          channels: conda-forge
+          cache-environment: true
+          init-shell: bash
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install pytest
-        pip install pytest-mock
-        conda install -c conda-forge micro_sam
-        pip install -r requirements.txt
-        pip install .
+      - name: Install dependencies
+        shell: bash -l {0}
+        run: |
+          micromamba run -n test python -m pip install --upgrade pip
+          micromamba run -n test pip install pytest pytest-mock
+          micromamba run -n test pip install -r requirements.txt
+          micromamba run -n test pip install .
 
-    - name: Run tests
-      run: |
-        python -m pytest tests/
+      - name: Run tests
+        shell: bash -l {0}
+        run: |
+          micromamba run -n test pytest tests/
