fix python version

--- a/environment.yml
+++ b/environment.yml
@@ -2,7 +2,7 @@ name: microtubule_tracking
 channels:
   - conda-forge
 dependencies:
-  - python>=3.11
+  - python=3.11
   - micro_sam
   - pip
   - pip:
