feat: update .gitignore to include labeling masks

--- a/.gitignore
+++ b/.gitignore
@@ -194,3 +194,56 @@ cython_debug/
 /config/optimal_configs/
 /models/
 /config/optimization/
+/labeling/masks/task_1_mask.png
+/labeling/masks/task_2_mask.png
+/labeling/masks/task_3_mask.png
+/labeling/masks/task_4_mask.png
+/labeling/masks/task_5_mask.png
+/labeling/masks/task_6_mask.png
+/labeling/masks/task_7_mask.png
+/labeling/masks/task_8_mask.png
+/labeling/masks/task_9_mask.png
+/labeling/masks/task_10_mask.png
+/labeling/masks/task_12_mask.png
+/labeling/masks/task_13_mask.png
+/labeling/masks/task_15_mask.png
+/labeling/masks/task_16_mask.png
+/labeling/masks/task_17_mask.png
+/labeling/masks/task_18_mask.png
+/labeling/masks/task_19_mask.png
+/labeling/masks/task_20_mask.png
+/labeling/masks/task_21_mask.png
+/labeling/masks/task_22_mask.png
+/labeling/masks/task_23_mask.png
+/labeling/masks/task_24_mask.png
+/labeling/masks/task_25_mask.png
+/labeling/masks/task_36_mask.png
+/labeling/masks/task_37_mask.png
+/labeling/masks/task_38_mask.png
+/labeling/masks/task_39_mask.png
+/labeling/masks/task_41_mask.png
+/labeling/masks/task_42_mask.png
+/labeling/masks/task_43_mask.png
+/labeling/masks/task_44_mask.png
+/labeling/masks/task_45_mask.png
+/labeling/masks/task_46_mask.png
+/labeling/masks/task_47_mask.png
+/labeling/masks/task_48_mask.png
+/labeling/masks/task_49_mask.png
+/labeling/masks/task_50_mask.png
+/labeling/masks/task_51_mask.png
+/labeling/masks/task_52_mask.png
+/labeling/masks/task_53_mask.png
+/labeling/masks/task_54_mask.png
+/labeling/masks/task_55_mask.png
+/labeling/masks/task_56_mask.png
+/labeling/masks/task_57_mask.png
+/labeling/masks/task_58_mask.png
+/labeling/masks/task_59_mask.png
+/labeling/masks/task_60_mask.png
+/labeling/masks/task_61_mask.png
+/labeling/masks/task_62_mask.png
+/labeling/masks/task_63_mask.png
+/labeling/masks/task_64_mask.png
+/labeling/masks/task_65_mask.png
+/labeling/masks/task_66_mask.png
